<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="15dp"
              tools:context=".MainActivity">

    <!--todo View untuk menerima inputan user-->
    <EditText android:layout_width="match_parent"
              android:hint="@string/first_value"
              android:inputType="numberDecimal"
              android:layout_height="wrap_content"
              android:id="@+id/firstvalue"/>

    <EditText android:layout_width="match_parent"
              android:hint="@string/second_value"
              android:inputType="numberDecimal"
              android:layout_height="wrap_content"
              android:id="@+id/secondvalue"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_marginTop="50dp"
                  android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/cleardata"
                android:text="@string/clear"
                android:layout_height="50dp"/>

        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnAdd"
                android:text="@string/plus"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnKurang"
                android:text="@string/minus"
                android:layout_height="50dp"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnKali"
                android:text="@string/kali"
                android:layout_height="50dp"/>
        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnBagi"
                android:text="@string/bagi"
                android:layout_height="50dp"/>

    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:id="@+id/hasil"
              android:paddingTop="5dp"
              android:textSize="25sp"
              android:textStyle="bold"
              android:textAlignment="center"
              android:hint="@string/hasil_akhir"
              android:layout_marginTop="50dp"
              android:layout_height="50dp"/>

</LinearLayout>